--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
+	"type": "module",
 	"scripts": {
 		"dev": "node scripts/dev.js",
 		"build": "tsc -noEmit -skipLibCheck && node scripts/esbuild.build.js production",
